test/elaboration/good/coreml_let.mle
let (main : int) = let (x : int) = 42 in x[]